--- a/src/styles.css
+++ b/src/styles.css
@@ -37,3 +37,17 @@ body {
     top: 30px;
     left: 350px;
 }
+
+.slidecontainerDL {
+    color: white;
+    position: absolute;
+    top: 230px;
+    left: 10px;
+}
+
+.slidecontainerDR {
+    color: white;
+    position: absolute;
+    top: 330px;
+    left: 10px;
+}
